--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ datasets = "^2.3.2"
 torchserve = "^0.6.0"
 typer = "^0.6.1"
 scikit-learn = "^1.1.1"
+torch = "^1.12.0"
 
 [tool.poetry.dev-dependencies]
 
